#!/bin/sh
sfeed_curses ~/.sfeed/feeds/*