@@ -1,2 +1,7 @@
 #!/bin/sh
+# Check if the first argument is "-u"
+if [ "$1" = "-u" ]; then
+    sfeed_update
+fi
+
 sfeed_curses ~/.sfeed/feeds/*
